--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -286,14 +286,16 @@ dashboard('#dashboard',freqData);
 
 <div class="container">
   <h2>Delphi Data</h2>
-  <p>Smoking in adults by age from 1984-Present:</p>            
+  <p>Regional Crime:</p>            
   <table class="table table-hover">
     <thead>
       <tr>
-        <th>Year</th>
-        <th>Gender</th>
-        <th>Percentage</th>
-        <th>Respondents</th>
+        <th>Agency</th>
+        <th>Charge Description</th>
+        <th>Address</th>
+        <th>Zip</th>
+        <th>Community</th>
+
       </tr>
     </thead>
     <tbody id="delphi-table">
