--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -14,6 +14,7 @@
     <![endif]-->        
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
+      <link rel="stylesheet" href="css/charD3.css">
 </head>
 
 <body>
