--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,26 @@
+<!-- ZIPCODE -->
+
+<form id="custom-zip">
+	<input type="text" placeholder="Enter a Zip Code" class="target" />
+    <input type="submit" value="View Data" />
+</form>
+<span class="message"></span> 
+
+
+
+
+<!-- DASHBOARD -->
 <div id='dashboard'></div>
 
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="js/chard3.js"></script>
+<script src="js/index.js"></script>
 
 
 
+
+<!-- OTHER -->
 
 <div class="container">
   <h2>Delphi Data</h2>
@@ -15,6 +30,7 @@
       <tr>
         <th>Agency</th>
         <th>Charge Description</th>
+        <th>Time</th>
         <th>Address</th>
         <th>Zip</th>
         <th>Community</th>
