print out array from DELPHI

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,6 +7,9 @@
 <span class="message"></span> 
 
 
+<form id="ready">
+    <input type="submit" value="View D3 array" />
+</form>
 
 
 <!-- DASHBOARD -->
@@ -30,7 +33,7 @@
       <tr>
         <th>Agency</th>
         <th>Charge Description</th>
-        <th>Time</th>
+        <th>Date</th>
         <th>Address</th>
         <th>Zip</th>
         <th>Community</th>
